src/content/docs/versions/http-api/0.5.x/inputs/whep.mdx
---
title: WHEP client
slug: http-api/0.5.x/http-api/inputs/whep
---

import { Aside, Badge } from '@astrojs/starlight/components';
import CollapsibleDetails from '@components/CollapsibleDetails.astro';

An input that lets you connect to a WHEP server endpoint to receive video and audio from it.

<Aside>
  This input complies with the WHEP specification described in [draft-ietf-wish-whep-02](https://datatracker.ietf.org/doc/html/draft-ietf-wish-whep-02).
</Aside>

## Usage

To use WHEP Input you must register it first. You can do it by sending a request like this:

<CollapsibleDetails summaryTitle="Example request" open>
  ```http
  POST: /api/input/:input_id/register
  Content-Type: application/json

  {
    "type": "whep_client",
    "endpoint_url": "https://example.com/whep",
    "bearer_token": "<TOKEN>",
    "video": {
      "decoder_preferences": ["ffmpeg_h264", "any"]
    }
  }
  ```
</CollapsibleDetails>

<Aside>
  * There are no decoder preferences for audio. Opus is the only supported audio codec and is always negotiated.
  * If no video decoder preferences are provided, Smelter automatically negotiates and uses one of the supported decoders (`ffmpeg_vp9`, `ffmpeg_vp8`, `ffmpeg_h264`, `vulkan_h264`).
</Aside>

## Reference

<CollapsibleDetails summaryTitle="Type definitions" open>
  ```tsx
  type WhepClient = {
    type: "whep_client";
    endpoint_url: string,
    bearer_token?: string;
    video?: VideoOptions;
    required?: bool;
    offset_ms?: f64;
  };
  ```
</CollapsibleDetails>

Parameters for registering a WHEP client as an input.

## Properties

### endpoint\_url

WHEP endpoint URL from which to receive the media stream.

* **Type**: `string`

***

### bearer\_token

Bearer token used for authentication with the WHEP endpoint.

* **Type**: `string`

### video

Parameters of a video included in the WHEP stream.

* **Type**: [`VideoOptions`](#videooptions)

***

### required

Determines if the input stream is essential for output frame production. If set to true and the stream is delayed, Smelter will postpone output frames until the stream is received.

* **Type**: `bool`
* **Default value**: `false`

***

### offset\_ms

Offset in milliseconds relative to the pipeline start (start request). If unspecified, the stream synchronizes based on the delivery time of the initial frames.

* **Type**: `f64`

## VideoOptions

Parameters of a video source included in the WHEP stream.

<CollapsibleDetails summaryTitle="Type definitions" open>
  ```tsx
  type VideoOptions = {
      decoder_preferences?: VideoDecoder[];
  };
  ```
</CollapsibleDetails>

### Properties

#### decoder\_preferences

An ordered list of preferred video decoders. The first element in the list has the highest priority during WHEP negotiation.

* **Type**: [`VideoDecoder`](#videodecoder)\[]
* **Default value**: `[ "any" ]`

Behavior:

* If the list ends with "any":
  * Smelter will first try the decoders explicitly listed (in order) and use the first one that is supported and negotiated in WHEP signaling.
  * If none of the listed decoders are supported, Smelter will fall back to any supported codec from the negotiated list that wasn’t already in the preferences.

* If "any" is not included:
  * Only the decoders listed will be considered.
  * If none are supported, no fallback will occur.

## VideoDecoder

Video decoder type.

<CollapsibleDetails summaryTitle="Type definitions" open>
  ```tsx
  type VideoDecoder =
    | "ffmpeg_h264"
    | "ffmpeg_vp8"
    | "ffmpeg_vp9"
    | "vulkan_h264"
    | "any";
  ```
</CollapsibleDetails>

* **Type**: "ffmpeg\_h264" | "ffmpeg\_vp8" | "ffmpeg\_vp9" | "vulkan\_h264" | "any"
* **Supported values**:
  * `"ffmpeg_h264"` - Software H264 decoder based on FFmpeg.
  * `"vulkan_h264"` (<Badge text="Required feature: vk-video" variant="note" />) - Hardware decoder. Requires GPU that supports Vulkan Video decoding.
  * `"ffmpeg_vp8"` - Software VP8 decoder based on FFmpeg.
  * `"ffmpeg_vp9"` - Software VP9 decoder based on FFmpeg.
  * `"any"` - Automatically selects any video decoder supported by Smelter.
